--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 </head>
 <body>
     <header>
-        <img src="Mohan.jpg" alt="Mohanakrishnan">
-        <h1>Mohanakrishnan</h1>
+        <img src="Mohan.jpg" alt="Mohanakrishnan Ramakrishnan">
+        <h1>Mohanakrishnan Ramakrishnan</h1>
         <p>Sic Mundus Creatus Est</p>
     </header>
     
