--- a/index.html
+++ b/index.html
@@ -3,50 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Mohanakrishnan Ramakrishnan - Portfolio</title>
+    <title>Mohanakrishnan Ramakrishnan - Portfolio</title>
+    <!-- Font Awesome CDN for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             line-height: 1.6;
-            padding: 20px;
+            padding: 0;
             margin: 0;
-            background-color: #f4f4f4;
+            background-color: #f0f2f5;
+            color: #333;
         }
         header {
+            background-color: #004d99;
+            color: white;
+            padding: 20px 0;
             text-align: center;
-            margin-bottom: 50px;
         }
         header img {
             width: 150px;
             border-radius: 50%;
+            border: 4px solid white;
         }
         header h1 {
             margin: 10px 0 0;
             font-size: 2.5em;
+            font-weight: bold;
         }
         header p {
             font-style: italic;
-            color: #555;
+            color: #d0e1f9;
+            font-size: 1.2em;
         }
         .content {
             max-width: 800px;
-            margin: 0 auto;
+            margin: 20px auto;
             background: #fff;
-            padding: 20px;
+            padding: 30px;
             border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
         .content h2 {
-            color: #333;
-            border-bottom: 2px solid #333;
+            color: #004d99;
+            border-bottom: 3px solid #004d99;
             padding-bottom: 5px;
+            margin-bottom: 20px;
+            font-size: 1.8em;
         }
         .content p {
             color: #555;
+            margin-bottom: 20px;
+            font-size: 1.1em;
         }
         .content ul {
             list-style: none;
             padding: 0;
+            margin: 0;
         }
         .content ul li {
             padding: 10px 0;
@@ -55,11 +68,46 @@
         .content ul li:last-child {
             border-bottom: none;
         }
+        .content ul li strong {
+            color: #004d99;
+        }
+        .content ul li:hover {
+            background-color: #f9f9f9;
+        }
         footer {
             text-align: center;
             margin-top: 50px;
+            padding: 20px;
+            background-color: #004d99;
+            color: white;
             font-size: 0.9em;
-            color: #777;
+        }
+        footer p {
+            margin: 0 0 10px;
+        }
+        footer a {
+            color: white;
+            margin: 0 10px;
+            font-size: 1.2em;
+            text-decoration: none;
+        }
+        footer a:hover {
+            color: #d0e1f9;
+        }
+        @media (max-width: 768px) {
+            .content {
+                padding: 20px;
+                margin: 10px;
+            }
+            header h1 {
+                font-size: 2em;
+            }
+            header p {
+                font-size: 1em;
+            }
+            .content h2 {
+                font-size: 1.6em;
+            }
         }
     </style>
 </head>
@@ -79,18 +127,21 @@
         <ul>
             <li><strong>February 20, 2023:</strong> Joined Medsix as an Embedded Engineer.</li>
             <li><strong>December 24, 2022:</strong> Graduated Cum Laude from New York University.</li>
-            <li><strong> June 1, 2022:</strong> Joined Pangolin Laser Systems as an Embedded Engineer Intern.</li>
-            <li><strong> January 28, 2021:</strong> Commenced the MS in Electrical Engineering at New York University.</li>
+            <li><strong>June 1, 2022:</strong> Joined Pangolin Laser Systems as an Embedded Engineer Intern.</li>
+            <li><strong>January 28, 2021:</strong> Commenced the MS in Electrical Engineering at New York University.</li>
             <li><strong>June 26, 2020:</strong> Graduated from SRM Institute of Science and Technology with a B.Tech in Electronics and Communication Engineering.</li>
         </ul>
         
         <h2>Contact</h2>
         <p>Sip Avenue, Jersey City, NJ, 07306</p>
-        <p> E-mail is the best way to reach me.</p>
+        <p>E-mail is the best way to reach me.</p>
     </div>
 
     <footer>
         <p>&copy; 2024 Mohanakrishnan</p>
+        <a href="mailto:mr5911=0@nyu.edu"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/mohanakrishnan02/" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/rmknan" target="_blank"><i class="fab fa-github"></i></a>
     </footer>
 </body>
 </html>
