--- a/index.html
+++ b/index.html
@@ -66,13 +66,14 @@
             border-bottom: none;
         }
     </style>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <div class="container">
     <div class="profile-container">
         <div class="profile-pic">
-            <img src="/assets/img/mohanakrishnan.jpg" alt="Mohanakrishnan's Photo">
+            <img src="/assets/img/Mohan.jpg" alt="Mohanakrishnan's Photo">
         </div>
         <div class="about-me">
             <h1>Mohanakrishnan Ramakrishnan</h1>
@@ -98,9 +99,9 @@
 
     <div class="social">
         <div class="contact-icons">
-            <a href="mailto:mr5910@nyu.edu" title="Email"><i class="fa-solid fa-envelope"></i></a>
-            <a href="https://github.com/rmknan" title="GitHub" rel="external nofollow noopener" target="_blank"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/mohanakrishnan02/" title="LinkedIn" rel="external nofollow noopener" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="mailto:mohanakrishnan@example.com" title="Email"><i class="fas fa-envelope"></i></a>
+            <a href="https://github.com/mohanakrishnan" title="GitHub" rel="external nofollow noopener" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/mohanakrishnan" title="LinkedIn" rel="external nofollow noopener" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
         <div class="contact-note">
             E-Mail is the best way to reach me.
