--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             margin-right: 15px;
             font-size: 24px;
             color: #333;
+            text-decoration: none;
+        }
+        .social .contact-icons a:hover {
+            color: #007bff;
         }
         .social .contact-note {
             margin-top: 10px;
@@ -73,7 +77,7 @@
 <div class="container">
     <div class="profile-container">
         <div class="profile-pic">
-            <img src="/assets/img/Mohan.jpg" alt="Mohanakrishnan's Photo">
+            <img src="Mohan.jpg" alt="Mohanakrishnan">
         </div>
         <div class="about-me">
             <h1>Mohanakrishnan Ramakrishnan</h1>
@@ -115,6 +119,5 @@
     </div>
 </footer>
 
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
 </html>
