--- a/index.html
+++ b/index.html
@@ -1,123 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Mohanakrishnan Ramakrishnan - Portfolio</title>
+    <meta name="author" content="Mohanakrishnan Ramakrishnan">
+    <meta name="description" content="Portfolio of Mohanakrishnan Ramakrishnan, Embedded Engineer.">
+    <meta name="keywords" content="Mohanakrishnan Ramakrishnan, Embedded Engineer, Portfolio, Robotics, Embedded Systems">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
+            font-family: 'Roboto', sans-serif;
+            line-height: 1.6;
             padding: 20px;
+            margin: 0;
+            background-color: #f4f4f4;
         }
-        .profile-container {
+
+        header {
+            margin-bottom: 50px;
+        }
+
+        header .profile {
             display: flex;
             align-items: center;
-            margin-bottom: 20px;
         }
-        .profile-container .profile-pic {
-            flex: 1;
+
+        header img {
+            width: 150px;
+            border-radius: 50%;
             margin-right: 20px;
         }
-        .profile-container .profile-pic img {
-            border-radius: 50%;
-            width: 100%;
-            max-width: 200px;
-            height: auto;
+
+        header h1 {
+            margin: 10px 0 0;
+            font-size: 2.5em;
         }
-        .profile-container .about-me {
-            flex: 2;
-            text-align: justify;
+
+        header p {
+            font-style: italic;
+            color: #555;
         }
-        .social {
-            margin-top: 20px;
+
+        .content {
+            max-width: 1000px;
+            margin: 0 auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        .social .contact-icons a {
-            margin-right: 15px;
-            font-size: 24px;
+
+        .content h2 {
             color: #333;
-            text-decoration: none;
-        }
-        .social .contact-icons a:hover {
-            color: #007bff;
-        }
-        .social .contact-note {
-            margin-top: 10px;
-        }
-        footer {
-            text-align: center;
-            margin-top: 40px;
-            padding-top: 20px;
-            border-top: 1px solid #ccc;
-        }
-        .timeline {
-            margin-top: 30px;
-        }
-        .timeline h2 {
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
             margin-bottom: 20px;
         }
+
+        .content p {
+            color: #555;
+            text-align: justify;
+        }
+
+        .timeline {
+            margin: 20px 0;
+        }
+
         .timeline ul {
-            list-style: none;
             padding: 0;
+            list-style: none;
         }
+
         .timeline ul li {
-            padding: 10px 0;
-            border-bottom: 1px solid #ddd;
+            position: relative;
+            padding-left: 40px;
+            margin-bottom: 20px;
         }
-        .timeline ul li:last-child {
-            border-bottom: none;
+
+        .timeline ul li::before {
+            content: '';
+            position: absolute;
+            left: 15px;
+            top: 5px;
+            width: 10px;
+            height: 10px;
+            background: #333;
+            border-radius: 50%;
+        }
+
+        .timeline ul li::after {
+            content: '';
+            position: absolute;
+            left: 19px;
+            top: 20px;
+            width: 2px;
+            height: 100%;
+            background: #ddd;
+        }
+
+        .timeline ul li:last-child::after {
+            display: none;
+        }
+
+        .timeline ul li strong {
+            display: block;
+            font-weight: 600;
+            margin-bottom: 5px;
+            color: #333;
+        }
+
+        .social-icons {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        .social-icons a {
+            margin: 0 10px;
+            color: #555;
+            font-size: 1.5em;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 50px;
+            font-size: 0.9em;
+            color: #777;
         }
     </style>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-
-<div class="container">
-    <div class="profile-container">
-        <div class="profile-pic">
-            <img src="Mohan.jpg" alt="Mohanakrishnan">
+    <header>
+        <div class="profile">
+            <img src="Mohan.jpg" alt="Mohanakrishnan Ramakrishnan">
+            <div>
+                <h1>Mohanakrishnan Ramakrishnan</h1>
+                <p>Sic Mundus Creatus Est</p>
+            </div>
         </div>
-        <div class="about-me">
-            <h1>Mohanakrishnan Ramakrishnan</h1>
-            <p>
-                Mohanakrishnan is a dedicated Embedded Engineer at Medsix, a pioneering medical device startup, where he contributes to developing innovative, life-saving technologies. He earned his Master’s in Electrical Engineering from New York University, specializing in Embedded Systems and Robotics, solidifying his expertise in these dynamic fields.
-            </p>
-            <p>
-                Mohanakrishnan’s work is marked by a commitment to advancing embedded systems technology. His journey is driven by a deep curiosity and a passion for exploring the intersections of embedded systems, robotics, and medical technology, with the goal of making a significant impact in these areas.
-            </p>
-        </div>
-    </div>
+    </header>
 
-    <div class="timeline">
+    <div class="content">
+        <h2>About Me</h2>
+        <p>
+            Mohanakrishnan is a dedicated Embedded Engineer at Medsix, a pioneering medical device startup, where he contributes to developing innovative, life-saving technologies. He earned his Master’s in Electrical Engineering from New York University, specializing in Embedded Systems and Robotics, solidifying his expertise in these dynamic fields.
+        </p>
+        <p>
+            Mohanakrishnan’s work is marked by a commitment to advancing embedded systems technology. His journey is driven by a deep curiosity and a passion for exploring the intersections of embedded systems, robotics, and medical technology, with the goal of making a significant impact in these areas.
+        </p>
+
         <h2>Timeline</h2>
-        <ul>
-            <li><strong>February 20, 2023:</strong> Joined Medsix as an Embedded Engineer.</li>
-            <li><strong>December 24, 2022:</strong> Graduated Cum Laude from New York University.</li>
-            <li><strong>June 1, 2022:</strong> Joined Pangolin Laser Systems as an Embedded Engineer Intern.</li>
-            <li><strong>January 28, 2021:</strong> Commenced the MS in Electrical Engineering at New York University.</li>
-            <li><strong>June 26, 2020:</strong> Graduated from SRM Institute of Science and Technology with a B.Tech in Electronics and Communication Engineering.</li>
-        </ul>
-    </div>
-
-    <div class="social">
-        <div class="contact-icons">
-            <a href="mailto:mohanakrishnan@example.com" title="Email"><i class="fas fa-envelope"></i></a>
-            <a href="https://github.com/mohanakrishnan" title="GitHub" rel="external nofollow noopener" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/mohanakrishnan" title="LinkedIn" rel="external nofollow noopener" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <div class="timeline">
+            <ul>
+                <li>
+                    <strong>February 20, 2023:</strong>
+                    Joined Medsix as an Embedded Engineer.
+                </li>
+                <li>
+                    <strong>December 24, 2022:</strong>
+                    Graduated Cum Laude from New York University.
+                </li>
+                <li>
+                    <strong>June 1, 2022:</strong>
+                    Joined Pangolin Laser Systems as an Embedded Engineer Intern.
+                </li>
+                <li>
+                    <strong>January 28, 2021:</strong>
+                    Commenced the MS in Electrical Engineering at New York University.
+                </li>
+                <li>
+                    <strong>June 26, 2020:</strong>
+                    Graduated from SRM Institute of Science and Technology with a B.Tech in Electronics and Communication Engineering.
+                </li>
+            </ul>
         </div>
-        <div class="contact-note">
-            E-Mail is the best way to reach me.
+
+        <div class="social-icons">
+            <a href="mailto:your.email@example.com" title="Email"><i class="fas fa-envelope"></i></a>
+            <a href="https://github.com/yourprofile" title="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/yourprofile" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
         </div>
     </div>
-</div>
 
-<footer>
-    <div class="container">
-        © 2024 Mohanakrishnan Ramakrishnan
-    </div>
-</footer>
+    <footer>
+        <p>&copy; 2024 Mohanakrishnan Ramakrishnan</p>
+    </footer>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
